<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".AboutActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center_horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/tic_tac_toe_iconc"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/andika_new_basic"
        android:text="@string/tic_tac_toe_game"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:layout_marginHorizontal="12dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/copyright_nightxstudio_productions"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_weight="1"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/andika_new_basic"
            android:text="@string/since_2022"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:layout_weight="1"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="15dp"
        android:padding="4dp"
        android:fontFamily="@font/andika_new_basic"
        android:textSize="23sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/contact_us_through"
        android:textColor="@color/colorPrimary"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/andika_new_basic"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="@string/production"
                android:textColor="@color/colorPrimary" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/result_box_background"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="15dp"
                android:padding="10dp"
                android:fontFamily="@font/andika_new_basic"
                android:textSize="14sp"
                android:text="@string/email"
                android:textColor="@color/colorPrimary"/>

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginHorizontal="15dp"
                android:fontFamily="@font/andika_new_basic"
                android:textSize="19sp"
                android:textStyle="bold"
                android:text="@string/founder_sai_pritam_panda"
                android:textColor="@color/colorPrimary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/result_box_background"
                android:orientation="horizontal"
                android:padding="20dp"
                android:gravity="center"
                android:layout_marginTop="2dp"
                android:layout_marginHorizontal="15dp">

                <ImageButton
                    android:id="@+id/instagramButton"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/instagram"
                    android:contentDescription="@string/instagram" />

                <ImageButton
                    android:id="@+id/twitterButton"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/twitter"
                    android:contentDescription="@string/twitter" />

                <ImageButton
                    android:id="@+id/linkedinButton"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/linkedin"
                    android:contentDescription="@string/linkedin" />

                <ImageButton
                    android:id="@+id/githubButton"
                    android:layout_width="47dp"
                    android:layout_height="47dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/github"
                    android:contentDescription="@string/github" />

            </LinearLayout>

            <ImageView
                android:id="@+id/buymeacoffee"
                android:layout_width="250dp"
                android:layout_height="65dp"
                android:layout_marginTop="32dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/buymeacoffee"
                android:contentDescription="@string/buymeacoffee" />

            <!--
            <com.google.android.ads.nativetemplates.TemplateView
                android:id="@+id/my_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginHorizontal="15dp"
                app:gnt_template_type="@layout/gnt_small_template_view" />
                -->

        </LinearLayout>

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>